unpackaged/main/default/objects/CICO_Check_Out__c/CICO_Check_Out__c.object-meta.xml
<CustomObject>
    <label>Check Out</label>
    <nameField>
        <displayFormat>CO-{000000}</displayFormat>
        <label>CO Ref No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Check Out</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>