unpackaged/main/default/objects/CICO_Check_Out__c/fields/Activity_Center__c.field-meta.xml
<CustomField>
    <fullName>Activity_Center__c</fullName>
    <formula>Internal_No__r.Activity_Center__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Center</label>
    <type>Text</type>
</CustomField>