unpackaged/main/default/objects/CICO_Check_Out__c/fields/Cassette__c.field-meta.xml
<CustomField>
    <fullName>Cassette__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cassette</label>
    <type>Checkbox</type>
</CustomField>