unpackaged/main/default/objects/CICO_Check_Out__c/fields/Check_In__c.field-meta.xml
<CustomField>
    <fullName>Check_In__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Check In</label>
    <referenceTo>CICO_Check_In__c</referenceTo>
    <relationshipLabel>Check Out</relationshipLabel>
    <relationshipName>Check_Out</relationshipName>
    <type>Lookup</type>
</CustomField>