unpackaged/main/default/objects/CICO_Check_Out__c/fields/Check_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Check Out Date</label>
    <type>DateTime</type>
</CustomField>