unpackaged/main/default/objects/CICO_Check_Out__c/fields/Check_Out_fuel_reading__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_fuel_reading__c</fullName>
    <label>Check Out fuel reading</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>