unpackaged/main/default/objects/CICO_Check_Out__c/fields/Check_Out_ID__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_ID__c</fullName>
    <label>Check Out ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>