unpackaged/main/default/objects/CICO_Check_Out__c/fields/Check_Out_Location__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Check Out Location</label>
    <referenceTo>CICO_Workshop_Location__c</referenceTo>
    <relationshipLabel>Check Out</relationshipLabel>
    <relationshipName>Check_Out</relationshipName>
    <type>Lookup</type>
</CustomField>