unpackaged/main/default/objects/CICO_Check_Out__c/fields/Check_Out_Status__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_Status__c</fullName>
    <label>Check Out Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Check Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>