unpackaged/main/default/objects/CICO_Check_Out__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>