unpackaged/main/default/objects/CICO_Check_Out__c/fields/Dispatcher_Name__c.field-meta.xml
<CustomField>
    <fullName>Dispatcher_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Client Receiver Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>