unpackaged/main/default/objects/CICO_Check_Out__c/fields/Emer_Tool_Kit__c.field-meta.xml
<CustomField>
    <fullName>Emer_Tool_Kit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tool Kit</label>
    <type>Checkbox</type>
</CustomField>