unpackaged/main/default/objects/CICO_Check_Out__c/fields/First_Aid_Box__c.field-meta.xml
<CustomField>
    <fullName>First_Aid_Box__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Aid Box</label>
    <type>Checkbox</type>
</CustomField>