unpackaged/main/default/objects/CICO_Check_Out__c/fields/Fuel_Tank_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Tank_Capacity__c</fullName>
    <formula>Internal_No__r.Fuel_Tank_Capacity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fuel Tank Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>