unpackaged/main/default/objects/CICO_Check_Out__c/fields/Inspected_By__c.field-meta.xml
<CustomField>
    <fullName>Inspected_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspected By</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Check Out (Inspected By)</relationshipLabel>
    <relationshipName>Check_Out2</relationshipName>
    <type>Lookup</type>
</CustomField>