unpackaged/main/default/objects/CICO_Check_Out__c/fields/Internal_No__c.field-meta.xml
<CustomField>
    <fullName>Internal_No__c</fullName>
    <label>Internal No</label>
    <referenceTo>Vehicle_Master__c</referenceTo>
    <relationshipLabel>Check Out</relationshipLabel>
    <relationshipName>Check_Out</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>