unpackaged/main/default/objects/CICO_Check_Out__c/fields/Last_Check_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Check_In_Date__c</fullName>
    <formula>Check_In__r.Check_In_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Check In Date</label>
    <type>DateTime</type>
</CustomField>