unpackaged/main/default/objects/CICO_Check_Out__c/fields/Last_Check_In_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>Last_Check_In_Document_Number__c</fullName>
    <formula>Check_In__r.Document_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Check In Document Number</label>
    <type>Text</type>
</CustomField>