unpackaged/main/default/objects/CICO_Check_Out__c/fields/Last_Check_In_Fuel_Reading__c.field-meta.xml
<CustomField>
    <fullName>Last_Check_In_Fuel_Reading__c</fullName>
    <formula>Check_In__r.Check_in_fuel_reading__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Check In Fuel Reading</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>