unpackaged/main/default/objects/CICO_Check_Out__c/fields/Last_Check_In_Location__c.field-meta.xml
<CustomField>
    <fullName>Last_Check_In_Location__c</fullName>
    <formula>Check_In__r.Check_in_Location__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Check In Location</label>
    <type>Text</type>
</CustomField>