unpackaged/main/default/objects/CICO_Check_Out__c/fields/Last_Check_In_Reading__c.field-meta.xml
<CustomField>
    <fullName>Last_Check_In_Reading__c</fullName>
    <formula>Check_In__r.Checkin_Reading__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Check In Reading(KM)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>