unpackaged/main/default/objects/CICO_Check_Out__c/fields/Plate_No__c.field-meta.xml
<CustomField>
    <fullName>Plate_No__c</fullName>
    <formula>Internal_No__r.Plate_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plate No</label>
    <type>Text</type>
</CustomField>