unpackaged/main/default/objects/CICO_Check_Out__c/fields/Receiver_Name__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receiver Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Check Out (Receiver Name)</relationshipLabel>
    <relationshipName>Check_Out1</relationshipName>
    <type>Lookup</type>
</CustomField>