unpackaged/main/default/objects/CICO_Check_Out__c/fields/Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number__c</fullName>
    <description>Reference No (Transfer)
Fleet Service Request No (Maintenance)
Assignment No (Rental)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Assign/Fleet Service/Ref No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>