unpackaged/main/default/objects/CICO_Check_Out__c/fields/Spare_Wheel__c.field-meta.xml
<CustomField>
    <fullName>Spare_Wheel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spare Wheel</label>
    <type>Checkbox</type>
</CustomField>