unpackaged/main/default/objects/CICO_Check_Out__c/fields/Vehicle_Handover_Number__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Handover_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Handover Number</label>
    <length>225</length>
    <type>Text</type>
</CustomField>