unpackaged/main/default/objects/CICO_Check_Out__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Check_Out_For__c</columns>
    <columns>Check_Out_Status__c</columns>
    <columns>Internal_No__c</columns>
    <columns>Plate_No__c</columns>
    <columns>Document_No__c</columns>
    <columns>Check_Out_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>